--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
   "main": "code.js",
   "scripts": {
     "dev": "tsc -w",
-    "build": "tsc -p tsconfig.json",
+    "build": "webpack --mode production",
     "watch": "npm run build -- --watch"
   },
   "author": "",
   "license": "",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@figma/plugin-typings": "*",
     "@types/node": "^20.2.5",
-    "typescript": "*"
+    "babel-loader": "^9.1.2",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@types/figma": "^1.0.4"
   }
 }
