--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["es6"],
+    "target": "esnext",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "strict": true,
     "typeRoots": [
       "./node_modules/@types",
